✨ Feat: Add more language keys.

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -1,16 +1,21 @@
 {
   "block.adv_agri.acidified_soil": "Acidic Dirt",
+  "block.adv_agri.advanced_crafting_table": "Advanced Crafting Table",
   "block.adv_agri.aluminum_block": "Aluminum Block",
   "block.adv_agri.aluminum_ore": "Aluminum Ore",
   "block.adv_agri.bamboo_block": "Bamboo Block",
   "block.adv_agri.bamboo_chopper": "Bamboo Chopper",
   "block.adv_agri.bamboo_fence": "Bamboo Fence",
   "block.adv_agri.bronze_block": "Bronze Block",
+  "block.adv_agri.burning_tank": "Burning Tank",
+  "block.adv_agri.centrifuge": "Centrifuge",
   "block.adv_agri.ceramic_jars": "ceramic Jar",
   "block.adv_agri.copper_block": "Copper Block",
   "block.adv_agri.copper_cable": "Copper Cable",
   "block.adv_agri.copper_ore": "Copper Ore",
   "block.adv_agri.crop_racks": "Crop Racks",
+  "block.adv_agri.crusher": "Crusher",
+  "block.adv_agri.extractor": "Extractor",
   "block.adv_agri.ferment_tank": "Fermentation Tank",
   "block.adv_agri.gold_cable": "Gold Cable",
   "block.adv_agri.hardened_soil": "Hardened Dirt",
@@ -18,17 +23,20 @@
   "block.adv_agri.humus": "Humus",
   "block.adv_agri.lead_block": "Lead_Block",
   "block.adv_agri.lead_ore": "Lead Ore",
+  "block.adv_agri.machine_shell": "Machine Shell",
   "block.adv_agri.nether_sulphur_ore": "Nether Sulphur Ore",
   "block.adv_agri.nickel_block": "Nickel Block",
   "block.adv_agri.nickel_ore": "Nickel Ore",
-  "block.adv_agri.phos_ore": "Phosphorite",
+  "block.adv_agri.phos_ore": "Phosphate Ore",
   "block.adv_agri.quarry": "Vermiculite",
+  "block.adv_agri.resin_extractor": "Resin Extractor",
   "block.adv_agri.silt": "Silt",
   "block.adv_agri.silver_block": "Silver Block",
   "block.adv_agri.silver_cable": "Silver Cable",
   "block.adv_agri.silver_ore": "Silver Ore",
   "block.adv_agri.steel_block": "Steel Block",
   "block.adv_agri.sulphur_ore": "Sulphur Ore",
+  "block.adv_agri.sunshine_liquefies_machine": "Sunshine Liquefies Machine",
   "block.adv_agri.tin_block": "Tin Block",
   "block.adv_agri.tin_cable": "Tin Cable",
   "block.adv_agri.tin_ore": "Tin Ore",
@@ -36,16 +44,7 @@
   "block.adv_agri.titanium_ore": "Titanium Ore",
   "block.adv_agri.tungsten_block": "Tungsten Block",
   "block.adv_agri.tungsten_ore": "Tungsten Ore",
-  "block.adv_agri.weathered_aluminium_ore": "Weathered Aluminum Ore",
-  "block.adv_agri.weathered_copper_ore": "Weathered Copper Ore",
-  "block.adv_agri.weathered_high_carbon_iron_ore": "Weathered High Carbon Iron Ore",
-  "block.adv_agri.weathered_lead_ore": "Weathered Lead Ore",
-  "block.adv_agri.weathered_nickel_ore": "Weathered Nickel Ore",
-  "block.adv_agri.weathered_silver_ore": "Weathered Silver Ore",
-  "block.adv_agri.weathered_tin_ore": "Weathered Tin Ore",
-  "block.adv_agri.weathered_titanium_ore": "Weathered Titanium Ore",
-  "block.adv_agri.weathered_tungsten_ore": "Weathered Tungsten Ore",
-  "block.adv_agri.weathered_zinc_ore": "Weathered Zinc Ore",
+  "block.adv_agri.washing_machine": "Washing Machine",
   "block.adv_agri.zinc_block": "Zinc Block",
   "block.adv_agri.zinc_ore": "Zinc Ore",
   "item.adv_agri.advanced_power_module": "Advanced Power Module",
@@ -60,16 +59,16 @@
   "item.adv_agri.aluminum_rod": "Aluminum Rod",
   "item.adv_agri.aluminum_shovel": "Aluminum Shovel",
   "item.adv_agri.aluminum_sword": "Aluminum Sword",
-  "item.adv_agri.bamboo_boots": "Bamboo Boots*",
   "item.adv_agri.bamboo_charcoal": "Bamboo Charcoal",
   "item.adv_agri.bamboo_chopper": "Bamboo Chopper",
   "item.adv_agri.bamboo_drill_rod": "Drill Stick",
   "item.adv_agri.bamboo_leaves": "Bamboo Leaf",
-  "item.adv_agri.bamboo_silk": "Bamboo Silk",
   "item.adv_agri.bamboo_shoot": "Bamboo Shoot",
+  "item.adv_agri.bamboo_silk": "Bamboo Silk",
   "item.adv_agri.bamboo_silk_board": "Bamboo Silk Board",
   "item.adv_agri.bamboo_silk_scissors": "Bamboo Silk Scissors",
   "item.adv_agri.bottle_large": "Large Bottle",
+  "item.adv_agri.bottle_medium": "Medium Bottle",
   "item.adv_agri.bottle_small": "Small Bottle",
   "item.adv_agri.bronze_axe": "Bronze Axe",
   "item.adv_agri.bronze_gear": "Bronze Gear",
@@ -81,6 +80,8 @@
   "item.adv_agri.bronze_rod": "Bronze Rod",
   "item.adv_agri.bronze_shovel": "Bronze Shovel",
   "item.adv_agri.bronze_sword": "Bronze Sword",
+  "item.adv_agri.celery_seed_bag": "Celery Seed Bag",
+  "item.adv_agri.chili_seed_bag": "Chili Seed Bag",
   "item.adv_agri.com_fert": "Fertilizer",
   "item.adv_agri.copper_axe": "Copper Axe",
   "item.adv_agri.copper_coil": "Copper Coil",
@@ -95,29 +96,17 @@
   "item.adv_agri.copper_shovel": "Copper Shovel",
   "item.adv_agri.copper_sword": "Copper Sword",
   "item.adv_agri.copper_wire": "Copper Wire",
-  "item.adv_agri.corase_ore_powder": "Coarse Ore Powder",
-  "item.adv_agri.crushed_aluminum_ore": "粉碎铝矿石",
-  "item.adv_agri.crushed_copper_ore": "粉碎铜矿石",
-  "item.adv_agri.crushed_gold_ore": "粉碎金矿石",
-  "item.adv_agri.crushed_high_carbon_iron_ore": "粉碎高碳铁矿石",
-  "item.adv_agri.crushed_iron_ore": "粉碎铁矿石",
-  "item.adv_agri.crushed_lead_ore": "粉碎铅矿石",
-  "item.adv_agri.crushed_nickel_ore": "粉碎镍矿石",
-  "item.adv_agri.crushed_raw_aluminum": "Crushed Raw Aluminum",
-  "item.adv_agri.crushed_raw_copper": "Crushed Raw Copper",
-  "item.adv_agri.crushed_raw_gold": "Crushed Raw Gold",
-  "item.adv_agri.crushed_raw_high_carbon_iron": "Crushed Raw High Carbon Iron",
-  "item.adv_agri.crushed_raw_iron_ore": "Crushed Raw Iron",
-  "item.adv_agri.crushed_raw_lead_ore": "Crushed Raw Lead",
-  "item.adv_agri.crushed_raw_nickel_ore": "Crushed Raw Nickel",
-  "item.adv_agri.crushed_raw_silver_ore": "Crushed Raw Silver",
-  "item.adv_agri.crushed_raw_titanium_ore": "Crushed Raw Titanium",
-  "item.adv_agri.crushed_raw_tungsten_ore": "Crushed Raw Tungsten",
-  "item.adv_agri.crushed_raw_zinc_ore": "Crushed Raw Zinc",
-  "item.adv_agri.crushed_silver_ore": "粉碎银矿石",
-  "item.adv_agri.crushed_titanium_ore": "粉碎钛矿石",
-  "item.adv_agri.crushed_tungsten_ore": "粉碎钨矿石",
-  "item.adv_agri.crushed_zinc_ore": "粉碎锌矿石",
+  "item.adv_agri.corn_seed_bag": "Corn Seed Bag",
+  "item.adv_agri.crushed_aluminum_ore": "Crushed Aluminum Ore",
+  "item.adv_agri.crushed_copper_ore": "Crushed Copper Ore",
+  "item.adv_agri.crushed_gold_ore": "Crushed Gold Ore",
+  "item.adv_agri.crushed_iron_ore": "Crushed Iron Ore",
+  "item.adv_agri.crushed_lead_ore": "Crushed Lead Ore",
+  "item.adv_agri.crushed_nickel_ore": "Crushed Nickel Ore",
+  "item.adv_agri.crushed_silver_ore": "Crushed Silver Ore",
+  "item.adv_agri.crushed_titanium_ore": "Crushed Titanium Ore",
+  "item.adv_agri.crushed_tungsten_ore": "Crushed Tungsten Ore",
+  "item.adv_agri.crushed_zinc_ore": "Crushed Zinc Ore",
   "item.adv_agri.electric_motor_big": "Electric Motor(Big)",
   "item.adv_agri.electric_motor_small": "Electric Motor(Small)",
   "item.adv_agri.elementary_well_block": "Elementary Well Block",
@@ -125,6 +114,7 @@
   "item.adv_agri.fine_bamboo_silk": "Finely Cut Bamboo Silk",
   "item.adv_agri.firecrackers": "Firecrackers",
   "item.adv_agri.forging_hammer": "Forging Hammer",
+  "item.adv_agri.garlic": "Garlic",
   "item.adv_agri.gold_foil": "Gold Rod",
   "item.adv_agri.gold_gear": "Gold Gear",
   "item.adv_agri.gold_plate": "Gold Plate",
@@ -145,6 +135,7 @@
   "item.adv_agri.lead_powder": "Lead Powder",
   "item.adv_agri.lead_shovel": "Lead Shovel",
   "item.adv_agri.lead_sword": "Lead Sword",
+  "item.adv_agri.lettuce_seed_bag": "Lettuce Seed Bag",
   "item.adv_agri.mineral_mud": "Mineral Mud",
   "item.adv_agri.nickel_axe": "Nickel Axe",
   "item.adv_agri.nickel_foil": "Nickel Foil",
@@ -160,6 +151,7 @@
   "item.adv_agri.passive_power_module": "Passive Power Module",
   "item.adv_agri.phos": "Phosphorus",
   "item.adv_agri.plant_ash": "Plant Ash",
+  "item.adv_agri.plant_straw": "Plant Straw",
   "item.adv_agri.potassium_salt_powder": "Potash",
   "item.adv_agri.power_module": "Power Module",
   "item.adv_agri.raw_aluminum": "Raw Aluminum",
@@ -170,6 +162,8 @@
   "item.adv_agri.raw_titanium": "Raw Titanium",
   "item.adv_agri.raw_tungsten": "Raw Tungsten",
   "item.adv_agri.raw_zinc": "Raw Zinc",
+  "item.adv_agri.rice_seed_bag": "Rice Seed Bag",
+  "item.adv_agri.rice_unhusked": "Rice Unhusked",
   "item.adv_agri.rolling_tool": "Sheet Metal Roller",
   "item.adv_agri.silver_axe": "Silver Axe",
   "item.adv_agri.silver_conductor_core": "Silver Conductor Core",
@@ -185,8 +179,8 @@
   "item.adv_agri.silver_sword": "Silver Sword",
   "item.adv_agri.silver_wire": "Silver Wire",
   "item.adv_agri.solar_berry": "Solar Berry",
-  "item.adv_agri.solarium_bottle": "Solarium Bottle",
   "item.adv_agri.solarium_bottle_large": "Solarium Bottle(large)",
+  "item.adv_agri.solarium_bottle_medium": "Solarium Bottle(medium)",
   "item.adv_agri.solarium_bottle_small": "Solarium Bottle(small)",
   "item.adv_agri.steel_axe": "Steel Axe",
   "item.adv_agri.steel_gear": "Steel Gear",
@@ -198,8 +192,11 @@
   "item.adv_agri.steel_rod": "Steel Rod",
   "item.adv_agri.steel_shovel": "Steel Shovel",
   "item.adv_agri.steel_sword": "Steel Sword",
+  "item.adv_agri.strawberry_seed_bag": "Strawberry Seed Bag",
   "item.adv_agri.sulfur": "Sulphur",
   "item.adv_agri.sulfur.tooltip": "&4Smells pungent, just like creepers.",
+  "item.adv_agri.sweet_potato": "Sweet Potato",
+  "item.adv_agri.sweet_potato_vine": "Sweet Potato Vine",
   "item.adv_agri.tin_axe": "Tin Axe",
   "item.adv_agri.tin_gear": "Tin Gear",
   "item.adv_agri.tin_hoe": "Tin Hoe",
@@ -233,6 +230,8 @@
   "item.adv_agri.tungsten_rod": "Tungsten Rod",
   "item.adv_agri.tungsten_shovel": "Tungsten Shovel",
   "item.adv_agri.tungsten_sword": "Tungsten Sword",
+  "item.adv_agri.vermiculite": "Vermiculite",
+  "item.adv_agri.water_chestnut": "Water Chestnut",
   "item.adv_agri.zinc_axe": "Zinc Axe",
   "item.adv_agri.zinc_foil": "Zinc Foil",
   "item.adv_agri.zinc_gear": "Zinc Gear",
@@ -244,9 +243,8 @@
   "item.adv_agri.zinc_rod": "Zinc Rod",
   "item.adv_agri.zinc_shovel": "Zinc Shovel",
   "item.adv_agri.zinc_sword": "Zinc Sword",
-  "item.adv_agri.zircon": "Zircon",
   "itemGroup.adv_agri.agriculture_core": "AdvancedAgriculture Core",
-  "itemGroup.adv_agri.agriculture_tool_and_armors": "AdvancedAgriculture Tools and Armors",
+  "itemGroup.adv_agri.agriculture_tool": "AdvancedAgriculture Tools",
   "itemGroup.adv_agri.agriculture_world": "AdvancedAgriculture Terrain",
   "ore.adv_agri.sulphur_ore.tooltip": "Smells pungent, m-ay explode in a second.",
   "title.adv_agri.advanced_crafting_table": "Advanced Crafting Table"
