--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -1,16 +1,21 @@
 {
   "block.adv_agri.acidified_soil": "酸化土",
+  "block.adv_agri.advanced_crafting_table": "高级工作台",
   "block.adv_agri.aluminum_block": "铝块",
   "block.adv_agri.aluminum_ore": "铝矿石",
   "block.adv_agri.bamboo_block": "竹捆",
   "block.adv_agri.bamboo_chopper": "劈竹刀",
   "block.adv_agri.bamboo_fence": "竹栅栏",
   "block.adv_agri.bronze_block": "青铜块",
+  "block.adv_agri.burning_tank": "Burning Tank",
+  "block.adv_agri.centrifuge": "Centrifuge",
   "block.adv_agri.ceramic_jars": "陶罐",
   "block.adv_agri.copper_block": "铜块",
   "block.adv_agri.copper_cable": "铜制导线",
   "block.adv_agri.copper_ore": "铜矿石",
   "block.adv_agri.crop_racks": "作物架",
+  "block.adv_agri.crusher": "粉碎机",
+  "block.adv_agri.extractor": "萃取器",
   "block.adv_agri.ferment_tank": "发酵罐",
   "block.adv_agri.gold_cable": "金质导线",
   "block.adv_agri.hardened_soil": "板结土",
@@ -18,17 +23,20 @@
   "block.adv_agri.humus": "腐殖质",
   "block.adv_agri.lead_block": "铅块",
   "block.adv_agri.lead_ore": "铅矿石",
+  "block.adv_agri.machine_shell": "机械外壳",
   "block.adv_agri.nether_sulphur_ore": "下界硫磺矿石",
   "block.adv_agri.nickel_block": "镍块",
   "block.adv_agri.nickel_ore": "镍矿石",
   "block.adv_agri.phos_ore": "磷矿石",
   "block.adv_agri.quarry": "蛭石",
+  "block.adv_agri.resin_extractor": "树脂提取机",
   "block.adv_agri.silt": "淤泥",
   "block.adv_agri.silver_block": "银块",
   "block.adv_agri.silver_cable": "银质导线",
   "block.adv_agri.silver_ore": "银矿石",
   "block.adv_agri.steel_block": "钢块",
   "block.adv_agri.sulphur_ore": "硫磺矿石",
+  "block.adv_agri.sunshine_liquefies_machine": "阳光液化机",
   "block.adv_agri.tin_block": "锡块",
   "block.adv_agri.tin_cable": "锡制导线",
   "block.adv_agri.tin_ore": "锡矿石",
@@ -36,16 +44,7 @@
   "block.adv_agri.titanium_ore": "钛矿石",
   "block.adv_agri.tungsten_block": "钨块",
   "block.adv_agri.tungsten_ore": "钨矿石",
-  "block.adv_agri.weathered_aluminium_ore": "Weathered Aluminum Ore",
-  "block.adv_agri.weathered_copper_ore": "风化铜矿石",
-  "block.adv_agri.weathered_high_carbon_iron_ore": "风化高碳铁矿石",
-  "block.adv_agri.weathered_lead_ore": "风化铅矿石",
-  "block.adv_agri.weathered_nickel_ore": "风化镍矿石",
-  "block.adv_agri.weathered_silver_ore": "风化银矿石",
-  "block.adv_agri.weathered_tin_ore": "风化锡矿石",
-  "block.adv_agri.weathered_titanium_ore": "风化钛矿石",
-  "block.adv_agri.weathered_tungsten_ore": "风化钨矿石",
-  "block.adv_agri.weathered_zinc_ore": "风化锌矿石",
+  "block.adv_agri.washing_machine": "清洗机",
   "block.adv_agri.zinc_block": "锌块",
   "block.adv_agri.zinc_ore": "锌矿石",
   "item.adv_agri.advanced_power_module": "高级动力组件",
@@ -60,25 +59,16 @@
   "item.adv_agri.aluminum_rod": "铝棒",
   "item.adv_agri.aluminum_shovel": "铝锹",
   "item.adv_agri.aluminum_sword": "铝剑",
-  "item.adv_agri.bamboo_backpack": "Bamboo Backpack*",
-  "item.adv_agri.bamboo_barrel": "Bamboo Barrel*",
-  "item.adv_agri.bamboo_baskets": "Basket*",
-  "item.adv_agri.bamboo_boots": "Bamboo Boots*",
-  "item.adv_agri.bamboo_cane": "Bamboo Walking Stick*",
   "item.adv_agri.bamboo_charcoal": "竹炭",
-  "item.adv_agri.bamboo_chestplate": "Bamboo Chestplate*",
   "item.adv_agri.bamboo_chopper": "砍竹刀",
   "item.adv_agri.bamboo_drill_rod": "竹钎",
-  "item.adv_agri.bamboo_helmet": "Bamboo Helmet*",
   "item.adv_agri.bamboo_leaves": "竹叶",
-  "item.adv_agri.bamboo_leggings": "Bamboo Leggings*",
-  "item.adv_agri.bamboo_raft": "Bamboo Raft*",
-  "item.adv_agri.bamboo_shield": "Bamboo Shield*",
   "item.adv_agri.bamboo_shoot": "竹笋",
   "item.adv_agri.bamboo_silk": "竹编",
   "item.adv_agri.bamboo_silk_board": "竹编板",
   "item.adv_agri.bamboo_silk_scissors": "竹编剪",
   "item.adv_agri.bottle_large": "大瓶子",
+  "item.adv_agri.bottle_medium": "Medium Bottle",
   "item.adv_agri.bottle_small": "小瓶子",
   "item.adv_agri.bronze_axe": "青铜斧",
   "item.adv_agri.bronze_gear": "青铜齿轮",
@@ -90,6 +80,8 @@
   "item.adv_agri.bronze_rod": "青铜棒",
   "item.adv_agri.bronze_shovel": "青铜锹",
   "item.adv_agri.bronze_sword": "青铜剑",
+  "item.adv_agri.celery_seed_bag": "芹菜种子袋",
+  "item.adv_agri.chili_seed_bag": "辣椒种子袋",
   "item.adv_agri.com_fert": "化肥",
   "item.adv_agri.copper_axe": "铜斧",
   "item.adv_agri.copper_coil": "铜线圈",
@@ -104,25 +96,13 @@
   "item.adv_agri.copper_shovel": "铜锹",
   "item.adv_agri.copper_sword": "铜剑",
   "item.adv_agri.copper_wire": "铜线",
-  "item.adv_agri.corase_ore_powder": "Coarse Ore Powder",
+  "item.adv_agri.corn_seed_bag": "玉米种子袋",
   "item.adv_agri.crushed_aluminum_ore": "粉碎铝矿石",
   "item.adv_agri.crushed_copper_ore": "粉碎铜矿石",
   "item.adv_agri.crushed_gold_ore": "粉碎金矿石",
-  "item.adv_agri.crushed_high_carbon_iron_ore": "粉碎高碳铁矿石",
   "item.adv_agri.crushed_iron_ore": "粉碎铁矿石",
   "item.adv_agri.crushed_lead_ore": "粉碎铅矿石",
   "item.adv_agri.crushed_nickel_ore": "粉碎镍矿石",
-  "item.adv_agri.crushed_raw_aluminum": "Crushed Raw Aluminum",
-  "item.adv_agri.crushed_raw_copper": "Crushed Raw Copper",
-  "item.adv_agri.crushed_raw_gold": "Crushed Raw Gold",
-  "item.adv_agri.crushed_raw_high_carbon_iron": "Crushed Raw High Carbon Iron",
-  "item.adv_agri.crushed_raw_iron_ore": "Crushed Raw Iron",
-  "item.adv_agri.crushed_raw_lead_ore": "Crushed Raw Lead",
-  "item.adv_agri.crushed_raw_nickel_ore": "Crushed Raw Nickel",
-  "item.adv_agri.crushed_raw_silver_ore": "Crushed Raw Silver",
-  "item.adv_agri.crushed_raw_titanium_ore": "Crushed Raw Titanium",
-  "item.adv_agri.crushed_raw_tungsten_ore": "Crushed Raw Tungsten",
-  "item.adv_agri.crushed_raw_zinc_ore": "Crushed Raw Zinc",
   "item.adv_agri.crushed_silver_ore": "粉碎银矿石",
   "item.adv_agri.crushed_titanium_ore": "粉碎钛矿石",
   "item.adv_agri.crushed_tungsten_ore": "粉碎钨矿石",
@@ -134,6 +114,7 @@
   "item.adv_agri.fine_bamboo_silk": "细致竹编",
   "item.adv_agri.firecrackers": "爆竹",
   "item.adv_agri.forging_hammer": "锻造锤",
+  "item.adv_agri.garlic": "大蒜",
   "item.adv_agri.gold_foil": "金箔",
   "item.adv_agri.gold_gear": "金齿轮",
   "item.adv_agri.gold_plate": "金板",
@@ -141,10 +122,6 @@
   "item.adv_agri.gold_rod": "金棒",
   "item.adv_agri.grass_ash": "草木灰",
   "item.adv_agri.indus_oil": "桐油",
-  "item.adv_agri.iron_bamboo_mixed_boots": "Iron Bamboo Mixed Boots",
-  "item.adv_agri.iron_bamboo_mixed_chestplate": "Iron Bamboo Mixed Chestplate",
-  "item.adv_agri.iron_bamboo_mixed_helmet": "Iron Bamboo Mixed Helmet",
-  "item.adv_agri.iron_bamboo_mixed_leggings": "Iron Bamboo Mixed leggings",
   "item.adv_agri.iron_gear": "铁齿轮",
   "item.adv_agri.iron_plate": "铁板",
   "item.adv_agri.iron_powder": "铁粉",
@@ -158,10 +135,7 @@
   "item.adv_agri.lead_powder": "铅粉",
   "item.adv_agri.lead_shovel": "铅锹",
   "item.adv_agri.lead_sword": "铅剑",
-  "item.adv_agri.leather_bamboo_mixed_boots": "Leather Bamboo Mixed Boots",
-  "item.adv_agri.leather_bamboo_mixed_chestplate": "Leather Bamboo Mixed Chestplate",
-  "item.adv_agri.leather_bamboo_mixed_helmet": "Leather Bamboo Mixed Helmet",
-  "item.adv_agri.leather_bamboo_mixed_leggings": "Leather Bamboo Mixed Leggings",
+  "item.adv_agri.lettuce_seed_bag": "生菜种子袋",
   "item.adv_agri.mineral_mud": "矿泥",
   "item.adv_agri.nickel_axe": "镍斧",
   "item.adv_agri.nickel_foil": "镍箔",
@@ -177,16 +151,19 @@
   "item.adv_agri.passive_power_module": "无源能量核心",
   "item.adv_agri.phos": "磷",
   "item.adv_agri.plant_ash": "草木灰",
+  "item.adv_agri.plant_straw": "Plant Straw",
   "item.adv_agri.potassium_salt_powder": "钾盐",
   "item.adv_agri.power_module": "动力组件",
-  "item.adv_agri.raw_aluminum": "Raw Aluminum",
-  "item.adv_agri.raw_lead": "Raw Lead",
-  "item.adv_agri.raw_nickel": "Raw Nickel",
-  "item.adv_agri.raw_silver": "Raw Silver",
-  "item.adv_agri.raw_tin": "Raw Tin",
-  "item.adv_agri.raw_titanium": "Raw Titanium",
-  "item.adv_agri.raw_tungsten": "Raw Tungsten",
-  "item.adv_agri.raw_zinc": "Raw Zinc",
+  "item.adv_agri.raw_aluminum": "粗铝",
+  "item.adv_agri.raw_lead": "粗铅",
+  "item.adv_agri.raw_nickel": "粗镍",
+  "item.adv_agri.raw_silver": "粗银",
+  "item.adv_agri.raw_tin": "粗锡",
+  "item.adv_agri.raw_titanium": "粗钛",
+  "item.adv_agri.raw_tungsten": "粗钨",
+  "item.adv_agri.raw_zinc": "粗锌",
+  "item.adv_agri.rice_seed_bag": "水稻种子带",
+  "item.adv_agri.rice_unhusked": "水稻",
   "item.adv_agri.rolling_tool": "辊压工具",
   "item.adv_agri.silver_axe": "银斧",
   "item.adv_agri.silver_conductor_core": "银导体核心",
@@ -202,8 +179,8 @@
   "item.adv_agri.silver_sword": "银剑",
   "item.adv_agri.silver_wire": "银线",
   "item.adv_agri.solar_berry": "阳光莓",
-  "item.adv_agri.solarium_bottle": "液态阳光瓶",
   "item.adv_agri.solarium_bottle_large": "大瓶液态阳光",
+  "item.adv_agri.solarium_bottle_medium": "中瓶液态阳光",
   "item.adv_agri.solarium_bottle_small": "小瓶液态阳光",
   "item.adv_agri.steel_axe": "钢斧",
   "item.adv_agri.steel_gear": "钢齿轮",
@@ -215,8 +192,11 @@
   "item.adv_agri.steel_rod": "钢棒",
   "item.adv_agri.steel_shovel": "钢锹",
   "item.adv_agri.steel_sword": "钢剑",
+  "item.adv_agri.strawberry_seed_bag": "草莓种子袋",
   "item.adv_agri.sulfur": "硫磺",
   "item.adv_agri.sulfur.tooltip": "刺鼻的味道，像是爬行者",
+  "item.adv_agri.sweet_potato": "红薯",
+  "item.adv_agri.sweet_potato_vine": "红薯藤",
   "item.adv_agri.tin_axe": "锡斧",
   "item.adv_agri.tin_gear": "锡齿轮",
   "item.adv_agri.tin_hoe": "锡锄",
@@ -250,6 +230,8 @@
   "item.adv_agri.tungsten_rod": "钨棒",
   "item.adv_agri.tungsten_shovel": "钨锹",
   "item.adv_agri.tungsten_sword": "钨剑",
+  "item.adv_agri.vermiculite": "蛭石",
+  "item.adv_agri.water_chestnut": "荸荠",
   "item.adv_agri.zinc_axe": "锌斧",
   "item.adv_agri.zinc_foil": "锌箔",
   "item.adv_agri.zinc_gear": "锌齿轮",
@@ -261,9 +243,8 @@
   "item.adv_agri.zinc_rod": "锌棒",
   "item.adv_agri.zinc_shovel": "锌锹",
   "item.adv_agri.zinc_sword": "锌剑",
-  "item.adv_agri.zircon": "蛭石",
   "itemGroup.adv_agri.agriculture_core": "高级农业 基础",
-  "itemGroup.adv_agri.agriculture_tool_and_armors": "高级农业 工具与盔甲",
+  "itemGroup.adv_agri.agriculture_tool": "高级农业 工具",
   "itemGroup.adv_agri.agriculture_world": "高级农业 地形",
   "ore.adv_agri.sulphur_ore.tooltip": "散发着刺鼻的味道...闻起来像是要爆炸",
   "title.adv_agri.advanced_crafting_table": "高级工作台"
