✨ Feat: Add wench translate.

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -232,6 +232,7 @@
   "item.adv_agri.tungsten_sword": "Tungsten Sword",
   "item.adv_agri.vermiculite": "Vermiculite",
   "item.adv_agri.water_chestnut": "Water Chestnut",
+  "item.adv_agri.wench": "Wench",
   "item.adv_agri.zinc_axe": "Zinc Axe",
   "item.adv_agri.zinc_foil": "Zinc Foil",
   "item.adv_agri.zinc_gear": "Zinc Gear",
