--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -232,6 +232,7 @@
   "item.adv_agri.tungsten_sword": "钨剑",
   "item.adv_agri.vermiculite": "蛭石",
   "item.adv_agri.water_chestnut": "荸荠",
+  "item.adv_agri.wench": "扳手",
   "item.adv_agri.zinc_axe": "锌斧",
   "item.adv_agri.zinc_foil": "锌箔",
   "item.adv_agri.zinc_gear": "锌齿轮",
