🔨 Fix: Rename com_fert to fertilizer. Make fertilizer functional as bone meal.

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -82,7 +82,6 @@
   "item.adv_agri.bronze_sword": "Bronze Sword",
   "item.adv_agri.celery_seed_bag": "Celery Seed Bag",
   "item.adv_agri.chili_seed_bag": "Chili Seed Bag",
-  "item.adv_agri.com_fert": "Fertilizer",
   "item.adv_agri.copper_axe": "Copper Axe",
   "item.adv_agri.copper_coil": "Copper Coil",
   "item.adv_agri.copper_conductor_core": "Copper Conductor Core",
@@ -110,6 +109,7 @@
   "item.adv_agri.electric_motor_big": "Electric Motor(Big)",
   "item.adv_agri.electric_motor_small": "Electric Motor(Small)",
   "item.adv_agri.elementary_well_block": "Elementary Well Block",
+  "item.adv_agri.fertilizer": "Fertilizer",
   "item.adv_agri.fine_bamboo_cutter": "Bamboo Silk Cutter",
   "item.adv_agri.fine_bamboo_silk": "Finely Cut Bamboo Silk",
   "item.adv_agri.firecrackers": "Firecrackers",
