--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -82,7 +82,6 @@
   "item.adv_agri.bronze_sword": "青铜剑",
   "item.adv_agri.celery_seed_bag": "芹菜种子袋",
   "item.adv_agri.chili_seed_bag": "辣椒种子袋",
-  "item.adv_agri.com_fert": "化肥",
   "item.adv_agri.copper_axe": "铜斧",
   "item.adv_agri.copper_coil": "铜线圈",
   "item.adv_agri.copper_conductor_core": "铜导体核心",
@@ -110,6 +109,7 @@
   "item.adv_agri.electric_motor_big": "大型电动机",
   "item.adv_agri.electric_motor_small": "小型电动机",
   "item.adv_agri.elementary_well_block": "初级水井方块",
+  "item.adv_agri.fertilizer": "化肥",
   "item.adv_agri.fine_bamboo_cutter": "细致竹编切割器",
   "item.adv_agri.fine_bamboo_silk": "细致竹编",
   "item.adv_agri.firecrackers": "爆竹",
