🔨 Fix: Add more translation key.

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -10,9 +10,7 @@
   "block.adv_agri.burning_tank": "Burning Tank",
   "block.adv_agri.centrifuge": "Centrifuge",
   "block.adv_agri.ceramic_jars": "ceramic Jar",
-  "block.adv_agri.copper_block": "Copper Block",
   "block.adv_agri.copper_cable": "Copper Cable",
-  "block.adv_agri.copper_ore": "Copper Ore",
   "block.adv_agri.crop_racks": "Crop Racks",
   "block.adv_agri.crusher": "Crusher",
   "block.adv_agri.extractor": "Extractor",
@@ -30,6 +28,7 @@
   "block.adv_agri.phos_ore": "Phosphate Ore",
   "block.adv_agri.quarry": "Vermiculite",
   "block.adv_agri.resin_extractor": "Resin Extractor",
+  "block.adv_agri.shte": "Solar High Temperature Electrolyze Machine",
   "block.adv_agri.silt": "Silt",
   "block.adv_agri.silver_block": "Silver Block",
   "block.adv_agri.silver_cable": "Silver Cable",
@@ -60,6 +59,7 @@
   "item.adv_agri.aluminum_shovel": "Aluminum Shovel",
   "item.adv_agri.aluminum_sword": "Aluminum Sword",
   "item.adv_agri.bamboo_charcoal": "Bamboo Charcoal",
+  "item.adv_agri.bamboo_charcoal_ball": "Bamboo Charcoal Ball",
   "item.adv_agri.bamboo_chopper": "Bamboo Chopper",
   "item.adv_agri.bamboo_drill_rod": "Drill Stick",
   "item.adv_agri.bamboo_leaves": "Bamboo Leaf",
@@ -245,7 +245,7 @@
   "item.adv_agri.zinc_shovel": "Zinc Shovel",
   "item.adv_agri.zinc_sword": "Zinc Sword",
   "itemGroup.adv_agri.agriculture_core": "AdvancedAgriculture Core",
-  "itemGroup.adv_agri.agriculture_tool": "AdvancedAgriculture Tools",
+  "itemGroup.adv_agri.agriculture_tools": "AdvancedAgriculture Tools",
   "itemGroup.adv_agri.agriculture_world": "AdvancedAgriculture Terrain",
   "ore.adv_agri.sulphur_ore.tooltip": "Smells pungent, m-ay explode in a second.",
   "title.adv_agri.advanced_crafting_table": "Advanced Crafting Table"
