--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -7,12 +7,10 @@
   "block.adv_agri.bamboo_chopper": "劈竹刀",
   "block.adv_agri.bamboo_fence": "竹栅栏",
   "block.adv_agri.bronze_block": "青铜块",
-  "block.adv_agri.burning_tank": "Burning Tank",
-  "block.adv_agri.centrifuge": "Centrifuge",
+  "block.adv_agri.burning_tank": "燃烧罐",
+  "block.adv_agri.centrifuge": "离心机",
   "block.adv_agri.ceramic_jars": "陶罐",
-  "block.adv_agri.copper_block": "铜块",
   "block.adv_agri.copper_cable": "铜制导线",
-  "block.adv_agri.copper_ore": "铜矿石",
   "block.adv_agri.crop_racks": "作物架",
   "block.adv_agri.crusher": "粉碎机",
   "block.adv_agri.extractor": "萃取器",
@@ -30,6 +28,7 @@
   "block.adv_agri.phos_ore": "磷矿石",
   "block.adv_agri.quarry": "蛭石",
   "block.adv_agri.resin_extractor": "树脂提取机",
+  "block.adv_agri.shte": "高温太阳电解机",
   "block.adv_agri.silt": "淤泥",
   "block.adv_agri.silver_block": "银块",
   "block.adv_agri.silver_cable": "银质导线",
@@ -60,6 +59,7 @@
   "item.adv_agri.aluminum_shovel": "铝锹",
   "item.adv_agri.aluminum_sword": "铝剑",
   "item.adv_agri.bamboo_charcoal": "竹炭",
+  "item.adv_agri.bamboo_charcoal_ball": "竹炭",
   "item.adv_agri.bamboo_chopper": "砍竹刀",
   "item.adv_agri.bamboo_drill_rod": "竹钎",
   "item.adv_agri.bamboo_leaves": "竹叶",
@@ -68,7 +68,7 @@
   "item.adv_agri.bamboo_silk_board": "竹编板",
   "item.adv_agri.bamboo_silk_scissors": "竹编剪",
   "item.adv_agri.bottle_large": "大瓶子",
-  "item.adv_agri.bottle_medium": "Medium Bottle",
+  "item.adv_agri.bottle_medium": "中瓶子",
   "item.adv_agri.bottle_small": "小瓶子",
   "item.adv_agri.bronze_axe": "青铜斧",
   "item.adv_agri.bronze_gear": "青铜齿轮",
@@ -245,7 +245,7 @@
   "item.adv_agri.zinc_shovel": "锌锹",
   "item.adv_agri.zinc_sword": "锌剑",
   "itemGroup.adv_agri.agriculture_core": "高级农业 基础",
-  "itemGroup.adv_agri.agriculture_tool": "高级农业 工具",
+  "itemGroup.adv_agri.agriculture_tools": "高级农业 工具",
   "itemGroup.adv_agri.agriculture_world": "高级农业 地形",
   "ore.adv_agri.sulphur_ore.tooltip": "散发着刺鼻的味道...闻起来像是要爆炸",
   "title.adv_agri.advanced_crafting_table": "高级工作台"
