🔨 Fix: Rename bamboo block to bamboo bundle

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -3,7 +3,7 @@
   "block.adv_agri.advanced_crafting_table": "Advanced Crafting Table",
   "block.adv_agri.aluminum_block": "Aluminum Block",
   "block.adv_agri.aluminum_ore": "Aluminum Ore",
-  "block.adv_agri.bamboo_block": "Bamboo Block",
+  "block.adv_agri.bamboo_bundle": "Bamboo Block",
   "block.adv_agri.bamboo_chopper": "Bamboo Chopper",
   "block.adv_agri.bamboo_fence": "Bamboo Fence",
   "block.adv_agri.bronze_block": "Bronze Block",
