--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -3,7 +3,7 @@
   "block.adv_agri.advanced_crafting_table": "高级工作台",
   "block.adv_agri.aluminum_block": "铝块",
   "block.adv_agri.aluminum_ore": "铝矿石",
-  "block.adv_agri.bamboo_block": "竹捆",
+  "block.adv_agri.bamboo_bundle": "竹捆",
   "block.adv_agri.bamboo_chopper": "劈竹刀",
   "block.adv_agri.bamboo_fence": "竹栅栏",
   "block.adv_agri.bronze_block": "青铜块",
