✏ Typo: Rename `item.adv_agri.bamboo_charcoal_ball` in zh_cn

--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -59,7 +59,7 @@
   "item.adv_agri.aluminum_shovel": "铝锹",
   "item.adv_agri.aluminum_sword": "铝剑",
   "item.adv_agri.bamboo_charcoal": "竹炭",
-  "item.adv_agri.bamboo_charcoal_ball": "竹炭",
+  "item.adv_agri.bamboo_charcoal_ball": "竹炭球",
   "item.adv_agri.bamboo_chopper": "砍竹刀",
   "item.adv_agri.bamboo_drill_rod": "竹钎",
   "item.adv_agri.bamboo_leaves": "竹叶",
