🔨 Fix: Rename item. Rename `Bamboo Shoot` to `Bamboo Sapling`

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -19,7 +19,7 @@
   "item.adv_agri.bamboo_chopper": "Bamboo Chopper",
   "item.adv_agri.bamboo_drill_rod": "Drill Stick",
   "item.adv_agri.bamboo_leaves": "Bamboo Leaf",
-  "item.adv_agri.bamboo_shoot": "Bamboo Shoot",
+  "item.adv_agri.bamboo_sapling": "Bamboo Sapling",
   "item.adv_agri.bamboo_silk": "Bamboo Silk",
   "item.adv_agri.bamboo_silk_board": "Bamboo Silk Board",
   "item.adv_agri.bamboo_silk_scissors": "Bamboo Silk Scissors",
