--- a/src/main/resources/assets/adv_agri/lang/zh_cn.json
+++ b/src/main/resources/assets/adv_agri/lang/zh_cn.json
@@ -19,7 +19,7 @@
   "item.adv_agri.bamboo_chopper": "砍竹刀",
   "item.adv_agri.bamboo_drill_rod": "竹钎",
   "item.adv_agri.bamboo_leaves": "竹叶",
-  "item.adv_agri.bamboo_shoot": "竹笋",
+  "item.adv_agri.bamboo_sapling": "竹笋",
   "item.adv_agri.bamboo_silk": "竹编",
   "item.adv_agri.bamboo_silk_board": "竹编板",
   "item.adv_agri.bamboo_silk_scissors": "竹编剪",
