🔨 Fix: Fix `AdvAgriGameRules.LENGTH_OF_YEAR`. When the rule value is below 1, the value will be set to the default value of 12.

--- a/src/main/resources/assets/adv_agri/lang/en_us.json
+++ b/src/main/resources/assets/adv_agri/lang/en_us.json
@@ -59,5 +59,6 @@
   "ore.adv_agri.sulphur_ore.tooltip": "Smells pungent, m-ay explode in a second.",
   "_": "->------------------------]   Messages  [------------------------<-",
   "adv_agri.game_rule.lengthOfYear.error1": "It is not possible to set the value of lengthOfYear to %s, because %s is not divisible by 4.",
-  "adv_agri.game_rule.lengthOfYear.error2": "After fetching upwards, the value is set to %s."
+  "adv_agri.game_rule.lengthOfYear.error2": "After fetching upwards, the value is set to %s.",
+  "adv_agri.game_rule.lengthOfYear.error3": "The game rule lengthOfYear cannot be set to less than %s, so the value is set to 12."
 }
