Feat: Update lang

--- a/src/main/resources/assets/advagri/lang/en_us.json
+++ b/src/main/resources/assets/advagri/lang/en_us.json
@@ -6,13 +6,19 @@
   "block.advagri.bronze_block": "Bronze Block",
   "block.advagri.burning_tank": "Burning Tank",
   "block.advagri.crop_racks": "Crop Racks",
+  "block.advagri.ginkgo_log": "Ginkgo Log",
+  "block.advagri.ginkgo_leaves": "Ginkgo Leaves",
+  "block.advagri.ginkgo_planks": "Ginkgo Planks",
+  "block.advagri.ginkgo_wood": "Ginkgo Wood",
   "block.advagri.hardened_soil": "Hardened Dirt",
   "block.advagri.humus": "Humus",
   "block.advagri.nether_sulphur_ore": "Nether Sulphur Ore",
   "block.advagri.phos_ore": "Phosphate Ore",
-  "block.advagri.quarry": "Vermiculite",
   "block.advagri.steel_block": "Steel Block",
+  "block.advagri.stripped_ginkgo_log": "Stripped Ginkgo Log",
+  "block.advagri.stripped_ginkgo_wood": "Stripped Ginkgo Wood",
   "block.advagri.sulphur_ore": "Sulphur Ore",
+  "block.advagri.vermiculite_ore": "Vermiculite Ore",
   "item.advagri.advanced_power_module": "Advanced Power Module",
   "item.advagri.bamboo_charcoal": "Bamboo Charcoal",
   "item.advagri.bamboo_charcoal_ball": "Bamboo Charcoal Ball",
@@ -27,6 +33,7 @@
   "item.advagri.bottle_medium": "Medium Bottle",
   "item.advagri.bottle_small": "Small Bottle",
   "item.advagri.celery_seed_bag": "Celery Seed Bag",
+  "item.advagri.chili": "Chili",
   "item.advagri.chili_seed_bag": "Chili Seed Bag",
   "item.advagri.corn_seed_bag": "Corn Seed Bag",
   "item.advagri.electric_motor_big": "Electric Motor(Big)",
@@ -35,12 +42,14 @@
   "item.advagri.fertilizer": "Fertilizer",
   "item.advagri.forging_hammer": "Forging Hammer",
   "item.advagri.garlic": "Garlic",
+  "item.advagri.lettuce": "Lettuce",
   "item.advagri.lettuce_seed_bag": "Lettuce Seed Bag",
   "item.advagri.mineral_mud": "Mineral Mud",
   "item.advagri.phos": "Phosphorus",
   "item.advagri.plant_ash": "Plant Ash",
   "item.advagri.plant_straw": "Plant Straw",
   "item.advagri.potassium_salt_powder": "Potash",
+  "item.advagri.rice": "Rice",
   "item.advagri.rice_seed_bag": "Rice Seed Bag",
   "item.advagri.rice_unhusked": "Rice Unhusked",
   "item.advagri.rolling_tool": "Sheet Metal Roller",
@@ -48,10 +57,12 @@
   "item.advagri.solarium_bottle_large": "Solarium Bottle(large)",
   "item.advagri.solarium_bottle_medium": "Solarium Bottle(medium)",
   "item.advagri.solarium_bottle_small": "Solarium Bottle(small)",
+  "item.advagri.strawberry": "Strawberry",
   "item.advagri.strawberry_seed_bag": "Strawberry Seed Bag",
   "item.advagri.sulfur": "Sulphur",
   "item.advagri.sulfur.tooltip": "&4Smells pungent, just like creepers.",
   "item.advagri.sweet_potato": "Sweet Potato",
+  "item.advagri.sweet_potato_bean_seed_bag": "Sweet Potato Seed Bag",
   "item.advagri.sweet_potato_vine": "Sweet Potato Vine",
   "item.advagri.vermiculite": "Vermiculite",
   "item.advagri.water_chestnut": "Water Chestnut",
