--- a/src/main/resources/assets/advagri/lang/zh_cn.json
+++ b/src/main/resources/assets/advagri/lang/zh_cn.json
@@ -6,13 +6,19 @@
   "block.advagri.bronze_block": "青铜块",
   "block.advagri.burning_tank": "燃烧罐",
   "block.advagri.crop_racks": "作物架",
+  "block.advagri.ginkgo_log": "银杏原木",
+  "block.advagri.ginkgo_leaves": "银杏树叶",
+  "block.advagri.ginkgo_planks": "银杏木板",
+  "block.advagri.ginkgo_wood": "银杏木",
   "block.advagri.hardened_soil": "板结土",
   "block.advagri.humus": "腐殖质",
   "block.advagri.nether_sulphur_ore": "下界硫磺矿石",
   "block.advagri.phos_ore": "磷矿石",
-  "block.advagri.quarry": "蛭石",
   "block.advagri.steel_block": "钢块",
+  "block.advagri.stripped_ginkgo_log": "去皮银杏原木",
+  "block.advagri.stripped_ginkgo_wood": "去皮银杏木",
   "block.advagri.sulphur_ore": "硫磺矿石",
+  "block.advagri.vermiculite_ore": "蛭石",
   "item.advagri.advanced_power_module": "高级动力组件",
   "item.advagri.bamboo_charcoal": "竹炭",
   "item.advagri.bamboo_charcoal_ball": "竹炭球",
@@ -26,7 +32,9 @@
   "item.advagri.bottle_large": "大瓶子",
   "item.advagri.bottle_medium": "中瓶子",
   "item.advagri.bottle_small": "小瓶子",
+  "item.advagri.celery": "芹菜",
   "item.advagri.celery_seed_bag": "芹菜种子袋",
+  "item.advagri.chili": "辣椒",
   "item.advagri.chili_seed_bag": "辣椒种子袋",
   "item.advagri.corn_seed_bag": "玉米种子袋",
   "item.advagri.electric_motor_big": "大型电动机",
@@ -35,23 +43,27 @@
   "item.advagri.fertilizer": "化肥",
   "item.advagri.forging_hammer": "锻造锤",
   "item.advagri.garlic": "大蒜",
+  "item.advagri.lettuce": "生菜",
   "item.advagri.lettuce_seed_bag": "生菜种子袋",
   "item.advagri.mineral_mud": "矿泥",
   "item.advagri.phos": "磷",
   "item.advagri.plant_ash": "草木灰",
-  "item.advagri.plant_straw": "Plant Straw",
+  "item.advagri.plant_straw": "秸秆",
   "item.advagri.potassium_salt_powder": "钾盐",
-  "item.advagri.rice_seed_bag": "水稻种子带",
+  "item.advagri.rice": "稻米",
+  "item.advagri.rice_seed_bag": "水稻种子袋",
   "item.advagri.rice_unhusked": "水稻",
   "item.advagri.rolling_tool": "辊压工具",
   "item.advagri.solar_berry": "阳光莓",
   "item.advagri.solarium_bottle_large": "大瓶液态阳光",
   "item.advagri.solarium_bottle_medium": "中瓶液态阳光",
   "item.advagri.solarium_bottle_small": "小瓶液态阳光",
+  "item.advagri.strawberry": "草莓",
   "item.advagri.strawberry_seed_bag": "草莓种子袋",
   "item.advagri.sulfur": "硫磺",
   "item.advagri.sulfur.tooltip": "刺鼻的味道，像是爬行者",
   "item.advagri.sweet_potato": "红薯",
+  "item.advagri.sweet_potato_bean_seed_bag": "红薯种子袋",
   "item.advagri.sweet_potato_vine": "红薯藤",
   "item.advagri.vermiculite": "蛭石",
   "item.advagri.water_chestnut": "荸荠",
