Feat: Update corn texture and fix spell mistakes

--- a/src/main/resources/assets/advagri/lang/en_us.json
+++ b/src/main/resources/assets/advagri/lang/en_us.json
@@ -36,6 +36,7 @@
   "item.advagri.chili_seed_bag": "Chili Seed Bag",
   "item.advagri.chili": "Chili",
   "item.advagri.corn_seed_bag": "Corn Seed Bag",
+  "item.advagri.corn": "Corn",
   "item.advagri.electric_motor_big": "Electric Motor(Big)",
   "item.advagri.electric_motor_small": "Electric Motor(Small)",
   "item.advagri.elementary_well_block": "Elementary Well Block",
