--- a/src/main/resources/assets/advagri/lang/zh_cn.json
+++ b/src/main/resources/assets/advagri/lang/zh_cn.json
@@ -37,6 +37,7 @@
   "item.advagri.chili_seed_bag": "辣椒种子袋",
   "item.advagri.chili": "辣椒",
   "item.advagri.corn_seed_bag": "玉米种子袋",
+  "item.advagri.corn": "玉米",
   "item.advagri.electric_motor_big": "大型电动机",
   "item.advagri.electric_motor_small": "小型电动机",
   "item.advagri.elementary_well_block": "初级水井方块",
